1. Fixing IE toolbars with separators making the toolbars 2px higher than others. 2. Fixing separators layout broken in FF+RTL.
git-svn-id: http://svn.ckeditor.com/CKEditor/branches/features/toolbargroup2@6737 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/toolbar.css
+++ b/_source/skins/kama/toolbar.css
@@ -248,7 +248,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	width: 16px;
 	height: 16px;
 	display: inline-block;
-	float: left;
 	cursor: default;
 }
 
@@ -273,10 +272,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	filter: ;
 }
 
-.cke_skin_kama .cke_rtl .cke_button .cke_icon
-{
-	float: right;
-}
 
 .cke_skin_kama .cke_button .cke_label
 {
@@ -284,14 +279,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	display: none;
 	padding-left: 3px;
 	line-height: 18px;
-	float: left;
-}
-
-.cke_skin_kama .cke_rtl .cke_button .cke_label
-{
-	padding-left: 0;
-	padding-right: 3px;
-	float: right;
 }
 
 .cke_skin_kama .cke_hc .cke_button .cke_label
@@ -323,7 +310,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	background-image: url(images/sprites.png);
 	_background-image: url(images/sprites_ie6.png);
 	background-repeat: no-repeat;
-	float: left;
 	cursor: default;
 }
 
@@ -335,12 +321,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 .cke_skin_kama .cke_browser_ie6 .cke_button .cke_buttonarrow
 {
 	filter: ;
-}
-
-.cke_skin_kama .cke_rtl .cke_button .cke_buttonarrow
-{
-	background-position: 0 -1469px; /* (0, -5) */
-	float: right;
 }
 
 /*** Firefox 2 ***/
@@ -367,6 +347,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 .cke_skin_kama .cke_browser_gecko .cke_rtl.cke_button a.cke_off,
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_button .cke_icon,
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_button .cke_buttonarrow,
+.cke_skin_kama .cke_browser_gecko .cke_separator,
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_toolbar_start
 {
 	float: right;
@@ -382,18 +363,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_break
 {
 	float: right;
-}
-
-/*** IE ***/
-
-/* The biggest problem with IE is the RTL support (and float:right). It's
-   totally broken, and quite delicate. IE8 fixed these issues. */
-
-.cke_skin_kama .cke_browser_ie .cke_rtl .cke_button .cke_icon,
-.cke_skin_kama .cke_browser_ie .cke_rtl .cke_button .cke_label,
-.cke_skin_kama .cke_browser_ie .cke_rtl .cke_button .cke_buttonarrow
-{
-	float: none;
 }
 
 /*** WebKit ***/
@@ -414,17 +383,20 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 
 /*** Mixed Fixes ***/
 
-.cke_skin_kama .cke_browser_ie8 .cke_button .cke_label,
 .cke_skin_kama .cke_browser_opera .cke_button .cke_label,
 .cke_skin_kama .cke_browser_webkit .cke_button .cke_label
 {
 	line-height: 20px;
 }
 
-.cke_skin_kama .cke_browser_opera.cke_browser_quirks .cke_button .cke_label,
-.cke_skin_kama .cke_browser_iequirks .cke_button .cke_label
+.cke_skin_kama .cke_browser_opera.cke_browser_quirks .cke_button .cke_label
 {
 	line-height: 17px;
+}
+
+.cke_skin_kama .cke_browser_ie .cke_button .cke_label
+{
+	line-height: 16px;
 }
 
 /* Fix cursor shape consistency on toolbar combos (#4031) */
